--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "A simple Todo list using Node, Express, Mongo, and Vue",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
+    "mongoose": "^5.10.2",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "@vue/cli": "^4.5.4"
