--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "A simple Todo list using Node, Express, Mongo, and Vue",
   "main": "server.js",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "@auth0/auth0-spa-js": "^1.11.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.9.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
